k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: msc-de1-project
  labels:
    app.kubernetes.io/name: flask-app
    app.kubernetes.io/version: "1.0.0"
